# Utils

./: .gitignore  CMakeLists.txt  utils.json
gtest/: gtest.cc  gtest_configreader.h
include/: configreader.h  includespdlog.h
qtest/: qtest.h
src/: configreader.cc  includespdlog.cc
